# Test_project

./: .gitignore  README.md  pyproject.toml
task_1/: calculate.py  tests.py
task_2/: work_df.py
